# ls_cmm_error_map

./: .coverage  .gitignore  README.md  cmm_error_map.ifp  ls_cmm_error_map.py.lprof  one_file_run_cmm_error_map.spec  profile.pyspy  pyproject.toml  requirements.txt  run_cmm_error_map.py  run_cmm_error_map.spec  test_profile.txt
config/: artefacts.toml
config/gui_configs/: APMP_2025_02.pkl  Legex-3-axis-6-prbs.pkl  Legex-XY-2-prbs.pkl  stepgauge600.pkl
config/gui_configs/old_configs/: APMP_2025.pkl  stepgauge600.pkl  very_silly.pkl  wrong_02_Legex-XY-2-prbs.pkl  wrong_Legex-XY-2-prbs.pkl
notebooks/: .~lock.profiling load_times.ods#  calc_no_gui.ipynb  comparing_calcs.xlsx  deform_nominals.ipynb  deform_nominals_02.ipynb  deform_nominals_03.ipynb  keymaps.ods  linear_model_derivation_sympy.ipynb  linear_model_matrix.ipynb  linear_model_matrix_02.ipynb  lp_load_Legex-3-axis-6-prbs.txt  lp_load_default_config.txt  matrix_error.ipynb  measurement_eq.ipynb  mmts.pkl  mpl_regression_tests.ipynb  mpl_regression_tests_02.ipynb  poly_model.ipynb  poly_model_02.ipynb  poly_model_array.ipynb  profiling load_times.ods  pyqtgraph.ipynb  read_config.ipynb  rot_mat.ipynb  rot_terms_poly.ipynb  save_restore.ipynb  save_restore_new.txt  save_restore_old.txt  scratch_pad.ipynb  to_bar_csy.ipynb  to_csv.ipynb  to_plate_csy.ipynb  to_plate_csy_02.ipynb
src/cmm_error_map/: __init__.py  config.py  dark_theme_toggle_pg.py  data_cmpts.py  design_linear.py  design_matrix_linear_fixed.py  design_poly.py  geometry3d.py  gui_cmpts.py  ls_cmm_error_map.py  plot2d_dock_test.py  plot3d_dock_test.py  plot_3d.py  plot_ballplate.py  plot_ballplate_update.py  plot_debug.py
src/cmm_error_map/config/: artefacts.toml  config.py  machines.toml
src/cmm_error_map/config/gui_configs/: APMP_2008.pkl  APMP_2025.pkl  APMP_2025_02.pkl  APMP_2025_03.pkl  Legex-3-axis-6-prbs.pkl  Legex-XY-2-prbs.pkl  PMM866_3axis_3mmts.pkl  PMM866_3axis_plates.pkl  XY_plane_2_prbs.pkl  default_config.pkl
src/cmm_error_map/demos/: README.md  plate_2d.py  plate_3d.py  plate_3d_dev_01.py
src/cmm_error_map/mpl_2014/: README.md  ballplate_3d_plots.py  ballplate_plots.py  design_matrix_linear.py  design_matrix_linear_tests.py  mmts_plot_3D_magn_slider_02.py  model_plot_3D.py  modelled_mmts_XYZ_with_sliders.py  single_modelled_mmts_XYZ.py  single_modelled_mmts_XYZ_no_plot.py
tests/: ls_cmm_error_map.py.lprof  profile_gui.py  test_cmm_to_art_csy.py  test_gui.py  test_matrix_calcs.py  test_mpl_regression.py  test_params.py  test_snapshots.py
tests/gui_configs/: Legex-3-axis-6-prbs.pkl  Legex-XY-2-prbs.pkl  Legex-XY-2-prbs_no_plate_plot.pkl  config_for_grid_test.pkl  default_config.pkl  plate_320.pkl  plate_320_02.pkl  plate_420_sim2.pkl  prb2_sim2_no_plate_plot.pkl  step_gauge_02.pkl  step_gauge_03.pkl  stepgauge600.pkl
tests/validation_data/bar/: fulldata.csv  metadata.csv  readme.txt  snapshot.csv
tests/validation_data/plate/: fulldata.csv  metadata.csv  snapshot.csv
videos/to_edit/: 01_basics_intro.m4a
