[project]
name = "cmm-error-map"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "elfnor", email = "elfnor@gmail.com" }
]
dependencies = [
    "pyside6>=6.7.2",
    "numpy==1.26.3",
    "scipy>=1.14.0",
    "ipython>=8.26.0",
    "pyqtgraph>=0.13.7",
    "ipympl>=0.9.4",
    "ipykernel>=6.29.5",
    "pyopengl>=3.1.7",
    "pyopengl-accelerate>=3.1.7",
    "pyqtdarktheme>=2.1.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "line-profiler>=4.2.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-qt>=4.4.0",
    "ruff>=0.9.1",
    "pandas>=2.2.2",
    "matplotlib>=3.9.1",
    "sympy>=1.13.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/cmm_error_map"]

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]