[project]
name = "cmm-error-map"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "elfnor", email = "elfnor@gmail.com" }
]
dependencies = [
    "pyside6>=6.7.2",
    "numpy==1.26.3",
    "scipy>=1.14.0",
    "pyqtgraph>=0.13.7",
    "pyopengl>=3.1.7",
    "pyopengl-accelerate>=3.1.7",
    "pyqtdarktheme>=2.1.0",
    "pyinstaller>=6.12.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/cmm_error_map"]

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]
